--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Education<
  <img src="ll.jpg" alt="image"width="400"height="300">
   <p>am at Joska Girls High School in Machakos</p>
-  <h1>Future work plan</h1>
+  <h1>Future work plan life</h1>
    <img src="dd.jpg" alt="image"width="400"height="300">
   <p>my dream is to one day,be either a teacher or apolicewoman.But specifically,i would like to be a great teacher</p>
   <h1>Hobbies</h1>
