i have inserted a video

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <h1>stacy</h1>
     <img src=".jpg" alt="image"width="500"height="600">
     <img src="kk.jpg" alt="image"width="500"height="600">
-    <img src="gari
-    .    <img src="gari.jpg" alt="image"width="500"height="600">
     <img src="modern.jpg" alt="image"width="500"height="600">
 <p><body style="background-color:yellow;">
   <h1>About myself</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/fEZ1S7RwD6k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    <img src="bb.jpg" alt="image"width="400"height="300">
   <p>am from Huruma"ngei"</p>
 <h1>Education<
@@ -22,6 +21,7 @@
    <img src="dd.jpg" alt="image"width="400"height="300">
   <p>my dream is to one day,be either a teacher or apolicewoman.But specifically,i would like to be a great teacher</p>
   <h1>Hobbies</h1>
+     <img src="ee.jpg" alt="image"width="400"height="300">
   <ol>
   <li>cooking</li>
   <li>singing</li>
